--- a/SignalRExample.Site1/Pages/Index.cshtml
+++ b/SignalRExample.Site1/Pages/Index.cshtml
@@ -6,22 +6,26 @@
 <div class="container">
     <div class="row">&nbsp;</div>
     <div class="row">
-        <div class="col-2">User</div>
-        <div class="col-4"><input type="text" id="userConnectionId" /></div>
-        <div class="col-4"><input type="text" id="targetConnectionId" /></div>
+        <div class="col-2">User Information</div>
+        <div class="col-2"><input type="text" id="userConnectionId" style="width: 225px; height: 30px;"/></div>
+      
     </div>
     <div class="row">
-        <div class="col-2">User</div>
-        <div class="col-4"><input type="text" id="userInput" /></div>
+        <div class="col-2">Online User</div>
+        <div class="col-6"><select id="targetConnectionId" style="width: 225px; height: 30px;"><option value=""></option></select></div>
+    </div>
+    <div class="row">
+        <div class="col-2">User Name</div>
+        <div class="col-4"><input type="text" id="userInput" style="width: 225px; height: 30px;"/></div>
     </div>
     <div class="row">
         <div class="col-2">Message</div>
-        <div class="col-4"><input type="text" id="messageInput" /></div>
+        <div class="col-4"><input type="text" id="messageInput" style="width: 225px; height: 30px;"/></div>
     </div>
     <div class="row">&nbsp;</div>
     <div class="row">
         <div class="col-6">
-            <input type="button" id="sendButton" value="Send Message" />
+            <input type="button" id="sendButton" value="Send Message" style="width: 225px; height: 30px;"/>
         </div>
     </div>
 </div>
